--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,13 @@
 *{
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body{
   background: #eff5f8;
+}
+
+a{
+  text-decoration: none;
 }
